[package]
name = "pulsar"
version = "0.1.0"
authors = ["Jonas Schievink <jonasschievink@gmail.com>"]
# TODO: Write description
#description = ""
documentation = "https://docs.rs/pulsar/"
repository = "https://github.com/jonas-schievink/pulsar.git"
# TODO: Add up to 5 keywords
#keywords = []
# TODO: Add categories
#categories = []
readme = "README.md"
license = "CC0-1.0"

[dependencies]
log = "0.4.1"
env_logger = "0.5.10"
serde = "1.0.66"
serde_derive = "1.0.66"
bincode = "1.0.0"
byteorder = "1.2.3"
num-traits = "0.2"
num-derive = "0.2"
rand = "0.5.0"
failure = "0.1.1"
bitflags = "1.0.3"
pa-proto = { path = "pa-proto" }
tokio = "0.1.7"
tokio-codec = "0.1.0"
tokio-uds = "0.2.0"

[dev-dependencies]
version-sync = "0.5"

[workspace]


# cargo-release configuration
[package.metadata.release]
tag-message = "{{version}}"
no-dev-version = true
pre-release-commit-message = "Release {{version}}"

# Change the changelog's `Unreleased` section to refer to this release and
# prepend new `Unreleased` section
[[package.metadata.release.pre-release-replacements]]
file    = "CHANGELOG.md"
search  = "## Unreleased"
replace = "## Unreleased\n\nNo changes.\n\n## {{version}} - {{date}}"

# Bump the version inside the example manifest in `README.md`
[[package.metadata.release.pre-release-replacements]]
file    = "README.md"
search  = 'pulsar = "[a-z0-9\\.-]+"'
replace = 'pulsar = "{{version}}"'

# Bump the version referenced by the `html_root_url` attribute in `lib.rs`
[[package.metadata.release.pre-release-replacements]]
file    = "src/lib.rs"
search  = "https://docs.rs/pulsar/[a-z0-9\\.-]+"
replace = "https://docs.rs/pulsar/{{version}}"
